feat: add GitHub Actions runner configuration and cleanup scripts
- Introduced a self-hosted GitHub Actions runner to automate CI/CD workflows.
- Added necessary Docker configurations, environment files, and scripts for setup and cleanup.

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -23,3 +23,8 @@ services:
     extends:
       file: ./translation-api/docker-compose.yaml
       service: translation-api
+
+  github-actions-runner:
+    extends:
+      file: ./github-actions-runner/docker-compose.yaml
+      service: github-actions-runner
