--- a/docker/translation-api/docker-compose.yaml
+++ b/docker/translation-api/docker-compose.yaml
@@ -1,6 +1,8 @@
 services:
   translation-api:
     image: ggwozdz/translation-api:latest
+    container_name: translation-api
+    restart: always
     environment:
       - LOG_LEVEL=INFO
       - DEVICE=cpu
