feat: update GitHub Actions runner configuration for speech-to-text API
- Enhance the configuration for the speech-to-text API runner by adding specific environment variables and improving the README for clarity.
- This change allows for better management and scaling of the runner instances.

--- a/docker/.env.example
+++ b/docker/.env.example
@@ -1,28 +1,16 @@
 # Common Configuration
 DOCKER_VOLUMES=E://docker-volumes
 
-# Github Actions Runner Configuration
-# URL format for repository: https://github.com/username/repo
-# URL format for organization: https://github.com/organization
-GITHUB_URL=https://github.com/username/home-lab
-
 # Personal Access Token with repo and admin:org scopes (for repo and org runners respectively)
 GITHUB_TOKEN=ghp_your_personal_access_token
 
-# Runner name - if not specified, a unique name will be generated
-GITHUB_RUNNER_NAME=home-lab-runner
-
-# Comma-separated list of labels for the runner
-GITHUB_RUNNER_LABELS=self-hosted,Linux,X64,docker
-
-# CPU cores limit for the runner
-RUNNER_CPU_LIMIT=1.0
-
-# Memory limit for the runner in GB
-RUNNER_MEMORY_LIMIT=2G
-
-# Runner group - Default for most cases
-GITHUB_RUNNER_GROUP=Default
-
 # GitHub Actions runner version to use
-RUNNER_VERSION=2.311.0
+RUNNER_VERSION=2.323.0
+
+# GitHub Actions Runner Configuration for speech-to-text-api
+SPEECH_TO_TEXT_GITHUB_URL=https://github.com/ggwozdz90/speech-to-text-api
+SPEECH_TO_TEXT_GITHUB_RUNNER_NAME=speech-to-text-api-github-runner
+SPEECH_TO_TEXT_GITHUB_RUNNER_LABELS=self-hosted,Linux,X64,docker,speech-to-text-api
+SPEECH_TO_TEXT_RUNNER_CPU_LIMIT=2.0
+SPEECH_TO_TEXT_RUNNER_MEMORY_LIMIT=12G
+SPEECH_TO_TEXT_GITHUB_RUNNER_GROUP=Default
