feat: add embed API service configuration
- Introduced a new embed API service to enhance functionality and support GPU processing.

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -23,6 +23,11 @@ services:
     extends:
       file: ./translation-api/docker-compose.yaml
       service: translation-api
+
+  embed-api:
+    extends:
+      file: ./embed-api/docker-compose.yaml
+      service: embed-api
 #  speech-to-text-api-github-actions-runner:
 #    extends:
 #      file: ./speech-to-text-api-github-actions-runner/docker-compose.yaml
